objects/EMP_Policy__c.object
<CustomObject>
    <description>This object will store if the user accepted ADP Dealer Services Policies</description>
    <fields>
        <fullName>Acknowledgement_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledgement Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Version_ID__c</fullName>
        <label>Content Version ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Acknowledgement__c</fullName>
        <label>Date of Acknowledgement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Addition_Date__c</fullName>
        <label>Policy Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>VersionNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Policy Acknowledgement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Acknowledgement_Status__c</columns>
        <columns>Date_of_Acknowledgement__c</columns>
        <columns>Employee_Contact__c</columns>
        <columns>Policy_Addition_Date__c</columns>
        <columns>User_Name__c</columns>
        <columns>VersionNumber__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Name__c</field>
            <operation>contains</operation>
            <value>matt ke</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Policy Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Acknowledgements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>